deploy-az.yml
#Namespace Section

apiVersion: v1
kind: Namespace
metadata:
  name: my-resume

---
#Deployment Section

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: my-resume
  name: my-resume-deployment
  labels:
    app: my-resume-app
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2        # how many pods we can add at a time
      maxUnavailable: 0  # maxUnavailable define how many pods can be unavailable
                         # during the rolling update
  selector:
    matchLabels:
      app: my-resume-app
  template:
    metadata:
      namespace: my-resume
      labels:
        app: my-resume-app
    spec:
      containers:
      - name: my-resume-pod
        image: ranjeethmd/my-resume:placeholder
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "287Mi"
            cpu: "1"
---
#Service Section

apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: my-resume-rgp
  namespace: my-resume
  name: my-resume-svc
  labels:
    app: my-resume-app
spec:  
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080      
      protocol: TCP
  selector:
    app: my-resume-app
