deploy.yml
#Namespace Section

apiVersion: v1
kind: Namespace
metadata:
  name: my-resume

---
#Deployment Section

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: my-resume
  name: my-resume-deployment
  labels:
    app: my-resume-app
spec:
  replicas: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2        # how many pods we can add at a time
      maxUnavailable: 0  # maxUnavailable define how many pods can be unavailable
                         # during the rolling update
  selector:
    matchLabels:
      app: my-resume-app
  template:
    metadata:
      namespace: my-resume
      labels:
        app: my-resume-app
    spec:
      containers:
      - name: my-resume-pod
        image: ranjeethmd/my-resume:v1
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "287Mi"
            cpu: "10m"
---
#Service Section

apiVersion: v1
kind: Service
metadata:
  namespace: my-resume
  name: my-resume-svc
  labels:
    app: my-resume-app
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 30001
      protocol: TCP
  selector:
    app: my-resume-app
